fix color contrast issues

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -28,8 +28,8 @@
 
 // Background colors
 @background-color-info:    white;
-@background-color-success: @primary-color;
-@background-color-warning: @oc-orange-6;
+@background-color-success: @oc-green-2;
+@background-color-warning: @oc-yellow-2;
 @background-color-error:   @oc-red-4;
 
 @background-color-highlight: lighten(@base-background-color, 3%);
